# autoDeepCase

./: README.md  pyproject.toml
data/debug/: deepCased_sentences.json  surfaceCased_sentences.json
src/autodeepcase/: __init__.py  check_duplicate_deep_case.py  json2deepCasedTxt.py  old_parseByPyknp.py  parseByPyknp.py  parseByPyknp_old.py  run.py  run_old.py  surfaceCase_to_deepCase.py  testJuman.py  useAutoDeepCase.py
src/autodeepcase/debug/: parseByPyknp.py  surfaceCase_to_deepCase.py  testJuman.py
src/autodeepcase/debug/utiles/: add_surfaceOrDeep_case.py  bunsetsuParser.py
src/autodeepcase/utiles/: add_surfaceOrDeep_case.py  add_surfaceOrDeep_case_old.py  bunsetsuParser.py  make_hierarchy.py  make_two_dimensional_array.py  utile.py  utile_old.py
