[project]
name = "autodeepcase"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "kohei arasawa", email = "karasawa@lyria.inf.shizuoka.ac.jp" }
]
dependencies = [
    "pyknp>=0.6.1",
    "setuptools>=72.2.0",
    "numpy>=2.0.1",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/autodeepcase"]
